--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello world!</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1 class="title">Hello world!</h1>
     <img src="img/Знімок екрана 2024-06-30 152020.png" width="100px" />
 </body>
 </html>
